# cmake_project

./: CMakeLists.txt  README.md
src/: farthest_points.cpp  main.cpp  matrix_multiplication.cpp  matrix_transformation.cpp
